# lct_hackathon_md_schedulling

./: .flake8  .gitignore  .gitlab-ci.yml  .pre-commit-config.yaml  .pypirc  Makefile  README.md  environment.yaml  project  pyproject.toml
.dvc/: config
data/processed/: dataset.parquet  res_predicts.csv  ФевральПрогнозФинал.xlsx
data/test_data/: df_cal.parquet  df_modal.parquet  df_users.parquet  df_vac.parquet  modal_color.json
docs/: Makefile  conf.py  index.rst  make.bat
notebooks/akrylov/: 01_base_models_darts copy.ipynb  02_cross_val multi.ipynb  02_cross_val solo.ipynb  02_cross_val.ipynb
notebooks/amecheryakov/: 01_cross_val_ffil_experiments.ipynb
notebooks/mvatkin/: 01_make_dataset.ipynb  02_crossval_01_select_model.ipynb  02_crossval_02_hyper_par.ipynb
scripts/: md_distribution_exampe.py  md_distribution_example.py  test_md_distribution.py
src/frontend/: Dockerfile  README.md  pyproject.toml
src/frontend/doctor_ui/: __init__.py  app.py  settings.py  user.py
src/frontend/doctor_ui/state/: __init__.py  state.py
src/frontend/doctor_ui/views/: access.py  calendar.py  login.py  logout.py  speciality.py  vacations.py
src/hack_doctor_schedul/data/: make_dataset.py
src/hack_doctor_schedul/md_distribution/: README.md  md_distribution.py
